add common style

--- a/client/src/assets/styles/common/index.scss
+++ b/client/src/assets/styles/common/index.scss
@@ -9,3 +9,12 @@
 .bg-overlay-color {
   background-color: rgba(74, 74, 74, .4);
 }
+
+.grid-center {
+  display: grid;
+  place-items: center;
+}
+
+.justify-content-evenly {
+  justify-content: space-evenly;
+}
