add common style

--- a/client/src/assets/styles/common/index.scss
+++ b/client/src/assets/styles/common/index.scss
@@ -18,3 +18,9 @@
 .justify-content-evenly {
   justify-content: space-evenly;
 }
+
+.text-ellipse {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
